# dataset_builder

./: .env  .gitignore  303598.json  CLAUDE.md  main.py  progress.json  pyproject.toml
.claude/: settings.local.json
.claude/memory/: prepare_dataset_logic.md  project_overview.md
src/dataset_builder/: config.py
src/dataset_builder/domain/: alignment.py  dataset_generator.py  dataset_manager.py  file_manager.py  models.py  parser.py  segment_result.py
src/dataset_builder/infrastructure/: dependency_injection.py  hf_dataset_manager.py  json_parser.py  s3_client.py  segment_parser.py  vtt_parser.py  whisper_dataset_generator.py
src/dataset_builder/services/: aligner.py  processor.py  progress_tracker.py  reader.py
src/dataset_builder/utils/: audio.py
