[project]
name = "dataset-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "dependency-injector>=4.41.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
    "stable-ts>=2.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataset_builder"]
